navbar and footer

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,6 +1,6 @@
 {
   "HOME": {
     "TITLE": "مرحبًا بك في معهد اقرأ",
-    "DESCRIPTION": "أفضل مكان للتعلّم والنمو"
+    "DESCRIPTION": "مكان للتعلم والنمو."
   }
 }
