--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "HOME": {
     "TITLE": "Welcome to Aqraa Institute",
-    "DESCRIPTION": "The best place to learn and grow"
+    "DESCRIPTION": "A place to learn and grow."
   }
 }
